--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -119,9 +119,22 @@
     <div class="col-lg-6">
         <div class="card">
             <div class="card-header">
-                <h3>Reportes Rápidos</h3>
+                <h3>Control de Incidentes Reportados</h3>
             </div>
             <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label for="exampleSelectGender">Zonas</label>
+                            <select class="form-control" id="exampleSelectGender">
+                                <option>Male</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 text-right">
+                        <br> <label style="font-size: 20px" class="col-form-label">Total de Incidentes: <strong>25</strong></label>
+                    </div>
+                </div>
                 <div class="map-box">
                     <agm-map [fullscreenControl]='true' [mapTypeControl]='true' [zoom]="10.6" [latitude]="latitude" [longitude]="longitude">
                         <agm-marker *ngFor="let incidenteItem of incidentes" [latitude]="incidenteItem.latitud" [longitude]="incidenteItem.longitud" [iconUrl]="incidenteItem.icono" (markerClick)="markerClicked(infoWindow)">
