--- a/src/app/pages/catalogo/catalogo.component.html
+++ b/src/app/pages/catalogo/catalogo.component.html
@@ -8,6 +8,9 @@
                 </div>
             </div>
             <div class="card-body">
+                <div class="form-group col-lg-6">
+                    <input type="text" class="form-control" id="exampleInputUsername1" [(ngModel)]="filterTerm" placeholder="Buscar Catálogo">
+                </div>
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <thead>
@@ -33,7 +36,7 @@
                                     No existen registros
                                 </td>
                             </tr>
-                            <tr *ngFor="let catalogo of catalogos ; let i = index">
+                            <tr *ngFor="let catalogo of catalogos | filter:filterTerm; let i = index">
                                 <td>{{i+1}}</td>
                                 <td>{{catalogo.nombre}}</td>
                                 <td>
