--- a/src/app/pages/reportes/reportes.component.html
+++ b/src/app/pages/reportes/reportes.component.html
@@ -1,3 +1,72 @@
-<p>
-  reportes works!
-</p>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="form-group">
+              <div class="m-1">
+                <input type="text" class="form-control" [(ngModel)]="filterTerm" name="search" placeholder="Filtros">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 text-right">
+            <div class="m-1">
+              <button type="button" class="btn btn-success m-1" (click)="descargarInfo()">Descargar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Estado</th>
+                <th>Identificacion</th>
+                <th>Nombres</th>
+                <th class="text-center">Agente Asignado</th>
+                <th>Operador</th>
+                <th>Tipo de Incidente</th>
+
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngIf="isCargando">
+                <td colspan="10">
+                  <div class="col-12 text-center">
+                    <img src="assets/img/loading/loader.gif" width="160px" height="120px">
+                    <br>
+                    <span>Espere por favor</span>
+                  </div>
+                  <hr>
+                </td>
+              </tr>
+              <tr *ngIf="incidentes.length==0 && !isCargando">
+                <td colspan="10" class="text-center">
+                  No existen registros
+                </td>
+              </tr>
+              <tr *ngFor="let incidente of incidentes | filter:filterTerm;  let i = index ">
+                <td>{{i+1}}</td>
+                <td *ngIf="incidente.estado=='GEN'"><span class="badge badge-pill badge-primary mb-1">GENERADO</span>
+                </td>
+                <td *ngIf="incidente.estado=='CAN'"><span class="badge badge-pill badge-danger mb-1">CANCELADO</span>
+                </td>
+                <td *ngIf="incidente.estado=='CHG'"><span class="badge badge-pill badge-warning mb-1">ASIGNADO</span>
+                </td>
+                <td>{{incidente.persona.identificacion}}</td>
+                <td>{{incidente.persona.nombres}} {{incidente.persona.apellidos}}</td>
+                <td class="text-center" *ngIf="incidente.idAgente !=null">{{incidente.idAgente}}</td>
+                <td class="text-center" *ngIf="incidente.idAgente ==null">Sin asignar</td>
+                <td>{{incidente.operador}}</td>
+                <td>{{incidente.tipoIncidente.nombre}}</td>
+
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
